# ros_realsense

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.d0b1843  CMakeLists.txt~  README.md  package.xml
capsicum_detection/: CMakeLists.txt  package.xml
capsicum_detection/cmake/: CustomPCLConfig.cmake
capsicum_detection/config/: fruit_rgbd_rviz.rviz
capsicum_detection/include/: capsicum_depth_filter.h  capsicum_detector.h  capsicum_pcl_types.h  capsicum_segmentation.h  cloud_filtering.h  cloud_filtering_tools.h  cloud_segmentation.h
capsicum_detection/launch/: capsicum_detection.launch  capsicum_detection_no_realsense.launch  capsicum_segmentation.launch  realsense_registration.launch
capsicum_detection/src/: capsicum_depth_filter.cpp  capsicum_detector.cpp  capsicum_segmentation.cpp  cloud_filtering.cpp  cloud_filtering_tools.cpp  cloud_registration.cpp  cloud_segmentation.cpp  realsense_registration.cpp
capsicum_detection/srv/: segmentCapsicum.srv
launch/: realsense_camera.launch  realsense_frames.launch
src/: example.hpp  realsense_registration.cpp  ros_realsense.cpp
